--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </button>
         <a href="#top" class="navbar-brand smoothScroll">Sistemas de Informação</a>
       </div>
-	  <p>ericeliasconde70@gmail.com
+	    <p>ericeliasconde70@gmail.com</p>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#top" class="smoothScroll"><span>Inicio</span></a></li>
