--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </button>
         <a href="#top" class="navbar-brand smoothScroll">Sistemas de Informação</a>
       </div>
-	    <p>ericeliasconde70@gmail.com</p>
+	    
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#top" class="smoothScroll"><span>Inicio</span></a></li>
@@ -187,6 +187,7 @@ a dados com JDBC. </p>
         <div class="section-title">
         	<h1 align="center">ISO 9241</h1>
 	   <img align="center"  src="images/iso.png" alt="ISO">
+		<p class="wow fadeInUp"  data-wow-delay="1s" >Email:ericeliasconde70@gmail.com</p>
 	</div>
    </div>
    </div>
