--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <li><a href="#ihc" class="smoothScroll"><span>IHC</span></a></li>
 			<li><a href="#poo" class="smoothScroll"><span>POO</span></a></li>
 			<li><a href="#curriculo" class="smoothScroll"><span>Meu Curriculo</span></a></li>
-			<li><a href="#iso" class="smoothScroll"><span>ISO</span></a></li>
+			<li><a href="#iso" class="smoothScroll"><span>ISO e EMAIL</span></a></li>
           </ul>
        </div>
 
